Update ShoppingCartServiceImpl.java